- Fixed bug retrieving color state - Changed color for downloaded books (too dark)

--- a/src/www/css/kaichronicles.css
+++ b/src/www/css/kaichronicles.css
@@ -340,5 +340,5 @@ body.dark #template-containertable {
 
 /** Downloaded book on Work With Books */
 body.dark #wwbooks-list tr.success > td {
-    background-color: #001a00;
+    background-color: #006400;
 }
